fix: color contrast

--- a/src/public/styles/template/global.css
+++ b/src/public/styles/template/global.css
@@ -774,12 +774,12 @@ video {
     padding: 10px 15px;
     border-radius: 15px;
     color: white;
-    background-color: #c1c1c1;
+    background-color: #575757;
     font-size: 12px;
 }
 
 .error-page-back:hover {
-    background-color: #b0b0b0;
+    background-color: #717171;
 }
 
 @media screen and (min-width: 800px) {
